<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/activityMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="4dp"
        android:background="@color/purple_500">

        <TextView
            android:id="@+id/currency_char_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/currency_char_code_string"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:gravity="center_horizontal|center_vertical"/>

        <TextView
            android:id="@+id/currency_nominal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/currency_nominal_string"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:gravity="center_horizontal|center_vertical"/>

        <TextView
            android:id="@+id/currency_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginRight="10dp"
            android:elegantTextHeight="true"
            android:maxLines="3"
            android:text="@string/name_currency"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/currency_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/currency_value_string"
            android:textColor="@color/white"
            android:gravity="center_horizontal|center_vertical"
            android:layout_weight="2"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
    </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/refresh"
            android:textColor="@color/white"
            android:layout_margin="4dp"/>

</LinearLayout>