<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculationActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activities.CalculationActivity">

    <TextView
        android:id="@+id/currency_calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_course"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:id="@+id/currencyComparison"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/flag_rus"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:src="@drawable/rus"
            android:scaleType="fitStart"
            android:paddingStart="4dp"/>

        <EditText
            android:id="@+id/input_for_rub"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="3"
            android:maxLines="1"
            android:background="@null"
            android:hint="@string/input_number_hint"
            android:inputType="number"
            android:digits="0123456789."
            android:textColor="@color/black"
            android:textSize="25sp"
            android:paddingStart="10dp" />

        <TextView
            android:id="@+id/code_rub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:paddingEnd="10dp"
            android:gravity="end"
            android:text="@string/rub"
            android:layout_gravity ="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/flag_country"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:src="@drawable/amd"
            android:scaleType="fitStart"
            android:paddingStart="4dp"/>

        <TextView
            android:id="@+id/output_for_currency"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="3"
            android:maxLines="1"
            android:hint="@string/_0"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:paddingStart="10dp" />

        <TextView
            android:id="@+id/code_currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:paddingEnd="10dp"
            android:gravity="end"
            android:layout_gravity ="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>